--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
+anyio==4.9.0
 asyncio==3.4.3
+certifi==2025.4.26
 evdev==1.9.2
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
 pynput==1.8.1
+pytchat==0.5.5
 python-xlib==0.33
 six==1.17.0
+sniffio==1.3.1
+typing_extensions==4.13.2
